# Mori_CPP

./: .gitmodules  CMakeLists.txt  config.json  main.cpp
lib/bot/: bot.cpp  bot.hpp
lib/connect/: connect.cpp  connect.hpp
lib/manager/: manager.cpp  manager.hpp
lib/types/: eLoginMethod.hpp
